--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     /* COLORS */
     --bg: #333;
     --text: #eee;
+    --grid-lines: #000;
 
     /* SIZES */
     --cell-hw: 100px;
@@ -45,7 +46,7 @@ header {
     margin: 0 auto;
     width: 340px;
 
-    background-color: #000;
+    background-color: var(--grid-lines);
     padding: var(--grid-spacing);
     border-radius: 10px;
 }
@@ -59,8 +60,15 @@ header {
     font-size: 3rem;
     border: none;
     border-radius: 5px;
-
 }
+
+.names {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+/* FOOTER */
 
 .footer {
     position: absolute;
@@ -86,4 +94,63 @@ header {
 
 .fa-github:hover {
     transform: scale(1.3);
+}
+
+/* MODALS */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: var(--grid-lines);
+    margin: 40vh auto 0;
+    padding: 20px;
+    width: 50%;
+    border-radius: 10px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.form {
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    align-items: center;
+    gap: 20px;
+}
+
+.btn,
+.form input {
+    background: transparent;
+    color: var(--text);
+    padding: 10px;
+    border: 2px solid var(--text);
+    border-radius: 5px;
+    font-family: 'DotGothic16', sans-serif;
+    font-size: 20px;
+}
+
+.form input {
+    width: 100%;
+}
+
+.btn {
+    grid-column: 1 / 3;
+    width: 60%;
+    justify-self: center;
+    margin-top: 20px;
+}
+
+.btn:hover {
+    background-color: var(--text);
+    color: var(--grid-lines)
 }
